--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="slick/slick.min.js"></script>
   <script src="homepage.js"></script>
   <link rel="stylesheet" href="styles.css">
-  <title>HSkinCare</title>
+  <title>Website MP HSkinCare</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand d-lg-none" href="#">
-          <img src="images/logo/logo.png" alt="Beauty Shop Logo">
+          <img src="./images/logo/logo.png" alt="Beauty Shop Logo">
         </a>
         <div class="navbar-brand d-lg-none d-flex align-items-center">
           <div class="nav-item">
@@ -74,9 +74,9 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" aria-labelledby="productsDropdown">
-              <li><a href="#">Page 1-1</a></li>
-              <li><a href="#">Page 1-2</a></li>
-              <li><a href="#">Page 1-3</a></li>
+              <li><a href="#">Sản phẩm 1</a></li>
+              <li><a href="#">Sản phẩm 2</a></li>
+              <li><a href="#">Sản phẩm 3</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="#">Giới thiệu</a></li>
@@ -87,9 +87,9 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" aria-labelledby="salesDropdown">
-              <li><a href="#">Page 1-1</a></li>
-              <li><a href="#">Page 1-2</a></li>
-              <li><a href="#">Page 1-3</a></li>
+              <li><a href="#">Khuyến mãi 1</a></li>
+              <li><a href="#">Khuyến mãi 2</a></li>
+              <li><a href="#">Khuyến mãi 3</a></li>
             </ul>
           </li>
           <li class="nav-item d-none d-lg-block">
@@ -102,9 +102,9 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" aria-labelledby="newsDropdown">
-              <li><a href="#">Page 1-1</a></li>
-              <li><a href="#">Page 1-2</a></li>
-              <li><a href="#">Page 1-3</a></li>
+              <li><a href="#">Tin tức 1</a></li>
+              <li><a href="#">Tin tức 2</a></li>
+              <li><a href="#">Tin tức 3</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -114,9 +114,9 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" aria-labelledby="agencyDropdown">
-              <li><a href="#">Page 1-1</a></li>
-              <li><a href="#">Page 1-2</a></li>
-              <li><a href="#">Page 1-3</a></li>
+              <li><a href="#">Đại lý 1</a></li>
+              <li><a href="#">Đại lý 2</a></li>
+              <li><a href="#">Đại lý </a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
