--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </ul>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <img src="/images/logo/logo.png" alt="Beauty Shop Logo">
+            <img src="./images/logo/logo.png" alt="Beauty Shop Logo">
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown"
